=head1 Changes in DBD-Oracle 1.16 (svn rev XXX)   XXXX 2004

TODO:
Add to "Unable to find required Oracle OCI files" message some
extra text for Windows users pointing them to PPM and Jeff's PPM repository.
OCI_SUCCESS_WITH_INFO -> Warning?
Add column_info test

  NOTE:
  This release has major changes to Unicode support. See below.
  This release no longer supports the old Oracle 7 OCI interface.

  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append
    with OCILobGetLength() and OCILobWrite(), insted of buggy OCILobAppend(),
    if the Oracle client version is < 9.0. Thanks to Jeff Urlwin.
  Fixed reporting of length truncated in error message thanks to Jeff Urlwin.
  Fixed column_info() to handle TIMESTAMP and INTERVAL datatypes
    for Oracle >= 8 thanks to Stephen Clouse.
  Fixed handling of temporary LOBs thanks to Chris Donnelly.
  Fixed STORE to cache attribute value in handle cache.
  Fixed seg fault returning LOB Locators reported by Raj Chandran.
  Fixed binding to allow overloaded scalars.
  Fixed setting of $DBI::err to 0 triggering PrintWarn in DBI >= 1.41.
  Fixed memory leaks in auto LOB refetch code thanks to Dongqiang Bai.

  Changed some utf8 internals for LOBs.
  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
    in numeric context returns the major version number (8, 9, 10 etc)
    in string context returns "major.minor" version string.

  Added automatic support for UTF-8 for both NLS_LANG and NLS_NCHAR
    Many thanks to Lincoln Baxter who did most of the hard work and testing
    and to Jeff Urlwin and others who also helped out.
    Perl 5.8.x is highly recommended if you want to use Unicode.
    See POD for more information and documentation.
  Added support for "... RETURNING lob_locator_column INTO ?"
    using $sth->bind_param_inout(2, \$loc, 0, {ora_type => ORA_BLOB});